# fahrplanplusplus

./: README.md  flake.nix  manage.py  pyproject.toml
.github/workflows/: style.yml
dashboard/: consumers.py  routing.py  urls.py  views.py
dashboard/templates/dashboard/: index.html
fahrplanplusplus/: asgi.py  settings.py  urls.py  wsgi.py
production_control/: admin.py  apps.py  broadcast.py  models.py  serializers.py  upstream.py  urls.py  views.py
production_control/migrations/: 0001_initial.py  0002_alter_event_id_alter_performance_actual_duration_and_more.py  0002_alter_event_id_alter_performance_id_alter_venue_id.py  0003_alter_performance_actual_start.py  0003_event_time_offset.py  0004_alter_performance_actual_duration.py  0004_departement_performanceannotation.py
