[tool.poetry]
name = "fahrplanplusplus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
djangorestframework = "^3.13.1"
pytimeparse = "^1.1.8"
python-dateutil = "^2.8.2"
channels = "^3.0.5"
channels-redis = "^3.4.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^5.0.4"
black = "^22.6.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
